--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -318,14 +318,14 @@ div.card-body li {
 
 .ol-border {
     border: 2px solid #0a7579;
-    width: 300px;
+    width: 500px;
     padding: 25px 0 0 0;
-    margin: 0;
+    margin: 0 auto;
 }
 
- .li-border {
+ .li-border:hover {
     border-bottom: 2px solid #0a7579;
-    width: 200px;
+    width: 45%;
  }
 
 
