--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -244,6 +244,12 @@ a.article:hover {
 
 }
 
+.responsive-logo {
+    width: 100%;
+    max-width: 1000px;
+    height: auto;
+  }
+
 .num-color {
     color: #42cef1; 
 }
@@ -393,10 +399,12 @@ div.card-body li {
     margin: 0 auto;
 }
 
- .li-border:hover {
+.a-bottom-border {
+    color: #2c71b1;
     border-bottom: 2px solid #0a7579;
-    width: 45%;
- }
+}
+
+
 
 
 
@@ -608,8 +616,22 @@ div.card-body li {
         background: #fff !important;
         opacity: 0;
     }
+
+    
 }
 
+@media (max-width: 1100px) {
+    .flex-container {
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 15px;
+        width: 75%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
 
 /* test */
 
