--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -213,6 +213,12 @@ a.article:hover {
     right: 0;
 }
 
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .flex-wrapper {
     display: flex;
     flex-wrap: wrap;
