--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -117,6 +117,10 @@ hr {
     
 }
 
+.btn-dark {
+    margin-right: 10px;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -658,6 +662,10 @@ div.card-body li {
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
+    }
+
+    .btn-dark {
+        margin-top: 10px;
     }
 
 }
