Added Green to the NPC of Interest

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -260,6 +260,10 @@ a.article:hover {
 .num-color-red {
     color: #FF0000;
 }
+
+.num-color-green {
+    color: #00bb00;
+}
 .top-margin {
     margin-top: 65px;
 }
